--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jithinksatheesh",
+  "name": "protfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://jithinksatheesh.github.io/protfolio",
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
-    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
